# rift

./: README.md  flake.nix  pyproject.toml
.github/workflows/: rift.yml
docs/: rift-prune.service  rift-snapshot-daily.service  rift-sync-nas.service
modules/: common.nix  default.nix
modules/prune/: default.nix
modules/snapshots/: default.nix
modules/sync/: default.nix  local.nix  push.nix
src/flox/tests/: test.sh  test_snapshots.py  test_zfs.py
src/flux/: cli.py  commands.py  datasets.py  zfs.py
src/flux/tests/: test_dataset.py  test_snapshots.py  test_zfs.py
src/nexo/: cli.py  datasets.py  snapshots.py  zfs.py
src/nexo/tests/: test_dataset.py
src/rift/: async_commands.py  cli.py  commands.py  datasets.py  replication.py  snapshots.py  zfs.py
src/rift/tests/: mocks.py  test_cli.py  test_dataset.py  test_datasets.py  test_snapshots.py  test_zfs.py
