[project]
name = "rift"
version = "1.2"
description = "rift: zfs send, sync and prune"
readme = "README.md"
authors = [{ name = "Markus Schneider", email = "mschneider@linkdot.org" }]
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "click>=8.1",
    "multimethod>=2.0",
    "structlog>=25.4.0",
]

[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "typing" },
    { include-group = "lint" },
]
typing = ["ty>=0.0.1a21"]
test = [
    "pytest>=8.3.4",
    "precisely>=0.1.9",
    "coverage>=7.10.7",
    "pytest-cov>=7.0.0",
    "freezegun>=1.5.5",
]
lint = ["ruff>=0.9.3"]

[project.scripts]
rift = "rift.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
ignore = ["F811"]

[tool.coverage.report]
exclude_also = ["raise NotImplementedError"]
